--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Just the Docs Template
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
-url: https://data-interview-essential.github.io/interview/
+url: https://data-interview-essential.github.io/interview
 
 aux_links:
   Template Repository: https://github.com/data-interview-essential/interview
