--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Data Interview Essential
+description: Interview tips for DS/MLE/DE/DA
 theme: just-the-docs
 
 url: https://data-interview-essential.github.io/interview
